Fix incorrect center vertical alignment The problem was `justify-content: center`. This line was removed.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,5 +7,4 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
